cluster/apps/tools/linkding/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-dashboard
  namespace: tools
  annotations:
    hajimari.io/appName: "linkding"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/group: tools

    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"

spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "linkding.${SECRET_DOMAIN}"

  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
